# ascore

./: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  versions.gradle
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/templates/: Choir SATB  Lead Sheet  Solo Piano  String Quartet
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kscore/: build.gradle  build.gradle.kts  settings.gradle
kscoreandroid/: build.gradle  build.gradle.kts
kscoreandroid/src/main/: AndroidManifest.xml
kscoreandroid/src/main/assets/: instruments.txt
kscoreandroid/src/main/res/values/: strings.xml  themes.xml
kscoreandroid/src/main/res/values-night/: themes.xml
mp3converter/: CMakeLists.txt  build.gradle  build.gradle.kts
mp3converter/libs/x86/: cmake_install.cmake
mp3converter/libs/x86_64/: cmake_install.cmake
mp3converter/src/main/: AndroidManifest.xml
mp3converter/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mp3converter/src/main/cpp/fluidsynth/: Android.mk  Application.mk  CMakeLists.txt  fluid_adriver.c  fluid_adriver.h  fluid_aufile.c  fluid_cmd.c  fluid_defsfont.c  fluid_oboe.cpp  fluid_settings.c  fluid_settings.h  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluidsynth.c  fluidsynth_priv.h  mkfluid.sh
mp3converter/src/main/cpp/fluidsynth/include/fluidsynth/: settings.h
mp3converter/src/main/cpp/jni/: fluid-native.c
mp3converter/src/main/cpp/libs/arm64-v8a/: cmake_install.cmake
mp3converter/src/main/cpp/libs/x86/: cmake_install.cmake
mp3converter/src/main/res/values/: strings.xml  themes.xml
mp3converter/src/main/res/values-night/: themes.xml
ui/: build.gradle  build.gradle.kts  google-services.json
ui/src/main/: AndroidManifest.xml
ui/src/main/assets/manual/en/: bar_numbering.html  contents.html  delete.html  edit.html  import.html  input.html  input2.html  input_advanced.html  insert_articulation.html  insert_barline.html  insert_bars.html  insert_beam_notes.html  insert_bowing.html  (+34 more)
ui/src/main/res/drawable/: arrow_left.xml  arrow_right.xml  image.xml  image_selected.xml  image_selected_square.xml  keys_nice_svg.xml  keysvg.xml  page_down.xml  splash.xml  style_rounded.xml  style_rounded_white.xml  style_square.xml  tabs.xml
ui/src/main/res/values/: strings.xml  themes.xml
(+1103 files in other folders)
